# ceph

./: ceph.spec.in
debian/: rules
doc/dev/: peering.rst
doc/rados/api/: libradospp.rst
qa/suites/ceph-ansible/smoke/basic/0-clusters/: 3-node.yaml  4-node.yaml
qa/suites/rados/singleton/all/: osd_memory_target_compliance.yaml
qa/workunits/rados/: test.sh  test_large_omap_detection.py
src/: ceph_osd.cc  vstart.sh
src/common/: Timer.cc  Timer.h  options.cc  strtol.cc
src/crush/: CrushTester.cc  CrushWrapper.cc  CrushWrapper.h  crush.h  mapper.c  mapper.h
src/include/: Context.h
src/messages/: MMgrReport.h
src/mgr/: DaemonServer.cc  MgrClient.cc
src/mon/: Monitor.cc  OSDMonitor.cc  OSDMonitor.h  PGMap.cc
src/osd/: OSD.cc  OSDMap.cc  OSDMap.h  OSDMapMapping.cc  OSDMapMapping.h  PG.cc  PG.h  PGBackend.cc  PGBackend.h  ReplicatedPG.cc  ReplicatedPG.h  osd_types.cc  osd_types.h
src/test/: CMakeLists.txt  admin_socket_output_tests.cc  test.cc
src/test/lazy-omap-stats/: CMakeLists.txt  lazy_omap_stats_test.cc  lazy_omap_stats_test.h
src/test/objectstore/: store_test.cc
src/test/osd_memory_target_compliance/: CMakeLists.txt  main.cc
src/tools/: ceph_featurebits_tool.cc
